# ai-agent-intensive-course-blog

./: .gitignore  README.md  chat_history.json  main.py  pyproject.toml
day1/: 1-first-prompt.py  2-chat-msg.py  2.1-revive-history.py  3-control-output-token.py  4-zero-shot.py  5-few-shot.py  6-chain-of-thought.py  7-ReAct.py  8-function-calling.py  8.1-init-db.sql  genai_client.py
day2/: 76d892c9-2d7e-458f-ab57-a64ecc28d4b2.json
day2/1_get_start_adk/: agent.py
day2/2_get_weather/: agent.py
day2/3_google_search/: agent.py
day2/4_multi_agent/: agent.py  db_tools.py  init_fintech_db.sql
helper/: get_env.py
